# better-control-rs

./: .gitignore  Cargo.toml  README.md  build.rs  plan.md
resources/ui/: window.ui
src/: app.rs  main.rs  window.rs
src/pages/: async_page.rs  audio.rs  bluetooth.rs  displays.rs  mod.rs  network.rs  page_trait.rs  power.rs  system_info.rs  wifi.rs
